# TaoRenderer

./: .gitignore  CMakeLists.txt  README.md  TaoRenderer-master.sln
TaoRenderer-master/: Camera.cpp  Camera.h  DataBuffer.cpp  DataBuffer.h  Math.h  Matrix.h  Model.cpp  Model.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  TaoRenderer-master.rc  TaoRenderer-master.vcxproj  TaoRenderer-master.vcxproj.filters  TaoRenderer.cpp  TaoRenderer.h  Texture.cpp  Texture.h  Utility.h  Vector.h  Window.cpp  Window.h  main.cpp  resource.h
assets/: model.dae
assets/autumn_forest_04/autumn_forest_04/: i_nx.hdr  i_ny.hdr  i_nz.hdr  i_px.hdr  i_py.hdr  i_pz.hdr  m0_nx.hdr  m0_ny.hdr  m0_nz.hdr  m0_px.hdr  m0_py.hdr  m0_pz.hdr  m1_nx.hdr  m1_ny.hdr  m1_nz.hdr  m1_px.hdr  m1_py.hdr  m1_pz.hdr  m2_nx.hdr  m2_ny.hdr  m2_nz.hdr  m2_px.hdr  m2_py.hdr  m2_pz.hdr  m3_nx.hdr  m3_ny.hdr  m3_nz.hdr  m3_px.hdr  m3_py.hdr  m3_pz.hdr  m4_nx.hdr  m4_ny.hdr  m4_nz.hdr  m4_px.hdr  m4_py.hdr  m4_pz.hdr  m5_nx.hdr  m5_ny.hdr  m5_nz.hdr  m5_px.hdr  (+26 more)
assets/blaubeuren_church_square/blaubeuren_church_square/: i_nx.hdr  i_ny.hdr  i_nz.hdr  i_px.hdr  i_py.hdr  i_pz.hdr  m0_nx.hdr  m0_ny.hdr  m0_nz.hdr  m0_px.hdr  m0_py.hdr  m0_pz.hdr  m1_nx.hdr  m1_ny.hdr  m1_nz.hdr  m1_px.hdr  m1_py.hdr  m1_pz.hdr  m2_nx.hdr  m2_ny.hdr  m2_nz.hdr  m2_px.hdr  m2_py.hdr  m2_pz.hdr  m3_nx.hdr  m3_ny.hdr  m3_nz.hdr  m3_px.hdr  m3_py.hdr  m3_pz.hdr  m4_nx.hdr  m4_ny.hdr  m4_nz.hdr  m4_px.hdr  m4_py.hdr  m4_pz.hdr  m5_nx.hdr  m5_ny.hdr  m5_nz.hdr  m5_px.hdr  (+26 more)
assets/plane/: plane.mtl
assets/spruit_sunrise/spruit_sunrise/: i_nx.hdr  (+65 more)
(+198 files in other folders)
